[package]
name = "rew-fs"
version = "0.1.0"
edition = "2021"
description = "Filesystem operations for Rew runtime"
license = "MIT"

[dependencies]
deno_core = "0.347.0"
anyhow = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43.0", features = ["fs", "io-util"] }

