[package]
name = "rew-os"
version = "0.1.0"
edition = "2021"
description = "OS information operations for Rew runtime"
license = "MIT"

[dependencies]
deno_core = "0.347.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "wincon", "winuser", "fileapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

