[package]
name = "rew-runtime"
version = "0.1.0"
edition = "2021"
description = "Core runtime for Rew"
license = "MIT"

[dependencies]
# Local crates
rew-fs = { path = "../rew-fs" }
rew-data = { path = "../rew-data" }
rew-os = { path = "../rew-os" }
rew-utils = { path = "../rew-utils" }

# External dependencies
deno_core = "0.347.0"
anyhow = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.10"
base64 = "0.21.0"
futures = "0.3.31"
once_cell = "1.18"

# Deno extensions
deno_webidl = "0.205.0"
deno_console = "0.205.0"
deno_url = "0.205.0"
deno_web = "0.236.0"
deno_ffi = "0.192.0"
deno_permissions = "0.64.0"
deno_fs = "0.115.0"
deno_io = "0.115.0"
deno_os = "0.22.0"
deno_process = "0.20.0"

